Fix responsive and scrollbar issues in uniformal styles

--- a/Transcyclopedia/css_assets/branching_pages_lightdark.css
+++ b/Transcyclopedia/css_assets/branching_pages_lightdark.css
@@ -55,6 +55,22 @@
 }
 
 
+/* Departures */
+.light_mode .scroller_departures::-webkit-scrolbar-track {
+    border-radius: 10px;
+    background: rgba(0, 0, 0, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    position: relative;
+    right: 2px;
+}
+
+.light_mode .scroller_departures::-webkit-scrollbar-thumb {
+    border: 1px solid rgba(0, 0, 0, 0.18);
+    background: rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+
+
 /* Alerts */
 .light_mode .alert_section_agency::-webkit-scrollbar-track, .light_mode .alert_section_lines::-webkit-scrollbar-track {
     border-radius: 10px;
