--- a/Transcyclopedia/css_assets/branching_pages_responsiveness.css
+++ b/Transcyclopedia/css_assets/branching_pages_responsiveness.css
@@ -95,4 +95,8 @@
         border-radius: 5px;
         border: 1px solid rgba( 255, 255, 255, 0.18 );
     }
+
+    .departure_times {
+        left: 0;
+    }
 }
